# LicensePlatesToolbox

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
plates/: __init__.py  __main__.py  core.py  data.json  prog_info.json
reports/testing/: index.html  report.html
reports/typecheck/: index.html
reports/typecheck/html/plates/: __init__.py.html  __main__.py.html  lic_plates.py.html
reports/typecheck/html/src/: lic_plates.py.html
src/: __main__.py  lic_plates.py  prog_info.json  test_lic_plates.py
src/license_plates/: __init__.py  __main__.py  lic_plates.py
tests/: conftest.py  test_lic_plates.py  test_plates.py
