[metadata]
name = plates
description = A module to operate with license plates and its patterns
author = Bautista Peirone
license = BSL-1.0
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9

[options]
packages = plates
install_requires =
    rich>=10
python_requires = >=3.7

[options.extras_require]
testing =
    mypy>=0.910
    mypy-extensions>=0.4
    pytest>=6.2
    tox>=3.24
    flake8>=4.0

[options.package_data]
plates = py.typed

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88