[metadata]
name = plates
description = A module to operate with license plates and its patterns
long_description = file: README.md
long_description_content_type = text/markdown
author = Bautista Peirone
author_email = bautista.peirone@gmail.com
version = attr: plates.__version__
url = https://github.com/BatiDyDx/LicensePlatesToolbox
license = BSL-1.0
license_file = LICENSE
platforms = 
    unix
    linux
    osx
    win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent
    Typing :: Typed
    Topic :: Utilities

[options]
packages = plates
install_requires = 
    rich>=9
python_requires = >=3.6
include_package_data = True

[options.extras_require]
test =
    mypy>=0.910
    pytest>=6.2
    tox>=3.24
    flake8>=4.0

[options.package_data]
plates = py.typed

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
exclude =
    *cache*
    .git
    .tox
    venv
per-file-ignores =
    # F401: Imported and unused
    # E402: Import not at top of file
    __init__.py: F401, E402
    # F403: * import, unable to detect undefined names
    # F405: name may be undefined
    test_plates.py: F403, F405